[package]
name = "merkle"
version = "0.1.0"
authors = ["Chainpool <http://chainx.org>"]
edition = "2018"

[dependencies]
serialization = { git = "https://github.com/chainx-org/bitcoin-rust", default-features = false }
sr-std = { git = "https://github.com/chainx-org/sr-std", default-features = false }
primitives = { git = "https://github.com/chainx-org/bitcoin-rust", default-features = false }
chain = { git = "https://github.com/chainx-org/bitcoin-rust", default-features = false }
bit-vec = "0.5.0"

[features]
default = ["std"]
std = [
     "serialization/std",
     "sr-std/std",
     "primitives/std",
     "chain/std",
     "bit-vec/std",
]
