[package]
name = "merkle"
version = "0.1.0"
authors = ["Chainpool <http://chainx.org>"]
edition = "2018"

[dependencies]
serialization = { branch = "sub2.0", git = "https://github.com/ABMatrix/bitcoin-rust", default-features = false }
sr-std = { package = "sp-std", version = "2.0.0-alpha.2", git = "https://github.com/paritytech/substrate", default-features = false }
primitives = { branch = "sub2.0", git = "https://github.com/ABMatrix/bitcoin-rust", default-features = false }
chain = { branch = "sub2.0", git = "https://github.com/ABMatrix/bitcoin-rust", default-features = false }
bit-vec = { git = "https://github.com/ABMatrix/bit-vec", default-features = false }
parity-codec = { version = "3.0", default-features = false }

[dependencies.parity-scale-codec]
version = "1.0.6"
default-features = false
features = ["derive"]

[features]
default = ["std"]
std = [
     "parity-codec/std",
     "serialization/std",
     "sr-std/std",
     "primitives/std",
     "chain/std",
     "bit-vec/std",
     "parity-codec/std",
]
